# yt-dlp-invidious

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
yt_dlp_plugins/extractor/: invidious.py
