[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-sample-plugins"
version = "2023.01.02"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["yt-dlp", "yt-dlp-plugin"]
authors = [
  { name = "John Doe", email = "johndoe@example.com" },
]
dependencies = []

[tool.hatch.env.default]
installer = "uv"
path = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_plugins"]
