[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-invidious"
version = "2024.09.24"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["yt-dlp", "yt-dlp-plugin"]
authors = [
  { name = "grqz" },
]
dependencies = []

[tool.hatch.env.default]
installer = "uv"
path = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_plugins"]
